# ltp

./: .gitignore
jvm/ltp4j/: pom.xml
jvm/ltp4j/src/main/java/edu/hit/ir/ltp/jni/: LtpJNI.java  NativeLibLoader.java
jvm/ltp4j/src/main/java/edu/hit/ir/ltp4j/: LTPParser.java  LTPPosTagger.java  LTPSegmentor.java
jvm/ltp4j/src/main/java/edu/hit/ir/ltp4j/jni/: LtpJNI.java  NativeLibLoader.java
jvm/ltp4j/src/test/java/edu/hit/ir/ltp/jni/: LtpJNITest.java
jvm/ltp4j/src/test/java/edu/hit/ir/ltp4j/: LTPParserTest.java  LTPPosTaggerTest.java  LTPSegmentorTest.java
jvm/ltp4j/src/test/java/edu/hit/ir/ltp4j/jni/: LtpJNITest.java
src/: CMakeLists.txt
src/jni/: CMakeLists.txt  create_jni_head.sh  ltp4j.cpp  ltp4j.h
src/parser.n/: parser.cpp  parser.h  parser_dll.cpp
